[package]
name = "jason_to_postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
